Russian Update Part 1

--- a/localisation/SOV_l_english.yml
+++ b/localisation/SOV_l_english.yml
@@ -46,29 +46,48 @@
  SOV_crisis_solved_desc:0 "WIP"
  SOV_governate_independence:0 "The Governorates Rebel"
  SOV_visit_kiev_desc:0 "WIP"
- SOV_belarus_crisis_tour:0 "§!Unlocks decision: §YTour of Minsk§!."
+ 
+ ##Russian Governorate System
  SOV_reformed_governorate_system:0 "§!§!The §YGovernorate System §!has been reformed."
- SOV_completed_tour_of_kiev:0 "§!§!Kirill has finished the §YTour of Kiev§!."
- SOV_completed_tour_of_baku:0 "§!§!Kirill has finished the §YTour of Baku§!."
- SOV_completed_tour_of_riga:0 "§!§!Kirill has finished the §YTour of Riga§!."
- SOV_completed_tour_of_minsk:0 "§!§!Kirill has finished the §YTour of Minsk§!."
- SOV_belarus_crisis_20:0 "§YBelarusian Unrest§! will increase by §R15§!."
- SOV_ukraine_crisis_tour:0 "§!Unlocks decision: §YTour of Kiev§!."
- SOV_ukraine_crisis_20:0 "§YUkrainian Unrest§! will increase by §R20§!."
- SOV_ukraine_crisis_10:0 "§YUkrainian Unrest§! will increase by §R10§!."
- SOV_transcaucasia_crisis_tour:0 "§!Unlocks decision: §YTour of Baku§!.\n§RUnproper planning of Kirill's public tour route may lead to an assassination attempt§!."
- SOV_transcaucasia_crisis_20:0 "§YTranscaucasian Unrest§! will increase by §R20§!."
- SOV_baltic_crisis_tour:0 "§!Unlocks decision: §YTour of Riga§!."
- SOV_baltic_crisis_20:0 "§YBaltic Unrest§! will increase by §R20§!."
- SOV_ukraine_crisis_remove_30:0 "§YUkrainian Unrest§! will decrease by §G30§!."
- SOV_ukraine_crisis_remove_15:0 "§YUkrainian Unrest§! will decrease by §G15§!."
- SOV_ukraine_crisis_remove_10:0 "§YUkrainian Unrest§! will decrease by §G10§!."
- SOV_transcaucasia_crisis_remove_15:0 "§YTranscaucasian Unrest§! will decrease by §G15§!."
+ SOV_failed_to_reform_governorate_system:0 "§!§!Reforms to the §YGovernorate System §!have failed!"
  SOV_can_tour_ukraine:0 "Kirill Vladimirovich has arrived in §YKiev§!."
  SOV_can_tour_belarus:0 "Kirill Vladimirovich has arrived in §YMinsk§!."
  SOV_can_tour_caucasia:0 "Kirill Vladimirovich has arrived in §YBaku§!."
  SOV_can_tour_baltic:0 "Kirill Vladimirovich has arrived in §YRiga§!."
-SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
+ SOV_completed_tour_of_kiev:0 "§!§!Kirill has finished the §YTour of Kiev§!."
+ SOV_completed_tour_of_baku:0 "§!§!Kirill has finished the §YTour of Baku§!."
+ SOV_completed_tour_of_riga:0 "§!§!Kirill has finished the §YTour of Riga§!."
+ SOV_completed_tour_of_minsk:0 "§!§!Kirill has finished the §YTour of Minsk§!."
+ SOV_ukraine_crisis_tour:0 "§!Unlocks decision: §YTour of Kiev§!."
+ SOV_belarus_crisis_tour:0 "§!Unlocks decision: §YTour of Minsk§!."
+ SOV_transcaucasia_crisis_tour:0 "§!Unlocks decision: §YTour of Baku§!.\n§RUnproper planning of Kirill's public tour route may lead to an assassination attempt§!."
+ SOV_baltic_crisis_tour:0 "§!Unlocks decision: §YTour of Riga§!."
+ SOV_baltic_crisis_20:0 "§YBaltic Unrest§! will increase by §R20§!."
+ SOV_baltic_crisis_15:0 "§YBaltic Unrest§! will increase by §R15§!."
+ SOV_baltic_crisis_10:0 "§YBaltic Unrest§! will increase by §R10§!."
+ SOV_ukraine_crisis_20:0 "§YUkrainian Unrest§! will increase by §R20§!."
+ SOV_ukraine_crisis_15:0 "§YUkrainian Unrest§! will increase by §R15§!."
+ SOV_ukraine_crisis_10:0 "§YUkrainian Unrest§! will increase by §R10§!."
+ SOV_belarus_crisis_20:0 "§YBelarusian Unrest§! will increase by §R20§!."
+ SOV_belarus_crisis_15:0 "§YBelarus Unrest§! will increase by §R15§!."
+ SOV_belarus_crisis_10:0 "§YBelarus Unrest§! will increase by §R10§!."
+ SOV_transcaucasia_crisis_20:0 "§YTranscaucasian Unrest§! will increase by §R20§!."
+ SOV_transcaucasia_crisis_15:0 "§YTranscaucasian Unrest§! will increase by §R15§!."
+ SOV_transcaucasia_crisis_10:0 "§YTranscaucasian Unrest§! will increase by §R10§!."
+ SOV_ukraine_crisis_remove_30:0 "§YUkrainian Unrest§! will decrease by §G30§!."
+ SOV_ukraine_crisis_remove_20:0 "§YUkrainian Unrest§! will decrease by §G20§!."
+ SOV_ukraine_crisis_remove_15:0 "§YUkrainian Unrest§! will decrease by §G15§!."
+ SOV_ukraine_crisis_remove_10:0 "§YUkrainian Unrest§! will decrease by §G10§!."
+ SOV_belarus_crisis_remove_20:0 "§YBelarusian Unrest§! will decrease by §G30§!."
+ SOV_belarus_crisis_remove_15:0 "§YBelarusian Unrest§! will decrease by §G15§!."
+ SOV_belarus_crisis_remove_10:0 "§YBelarusian Unrest§! will decrease by §G10§!."
+ SOV_baltic_crisis_remove_20:0 "§YBaltic Unrest§! will decrease by §G30§!."
+ SOV_baltic_crisis_remove_15:0 "§YBaltic Unrest§! will decrease by §G15§!."
+ SOV_baltic_crisis_remove_10:0 "§YBaltic Unrest§! will decrease by §G10§!."
+ SOV_transcaucasia_crisis_remove_20:0 "§YTranscaucasian Unrest§! will decrease by §G30§!."
+ SOV_transcaucasia_crisis_remove_15:0 "§YTranscaucasian Unrest§! will decrease by §G15§!."
+ SOV_transcaucasia_crisis_remove_10:0 "§YTranscaucasian Unrest§! will decrease by §G10§!.
+ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  SOV_governorate_crisis_decisions_desc:0 "\nThe Governorate system has slowly become unpopular with the local population. Tsar Kirill Vladimirovich has ignored this problem for some time, which has lead to civil unrest in recent years.\n\nUnrest in the Baltics: §Y[?baltic_crisis_level]§!\nUnrest in Belarus: §Y[?belarus_crisis_level]§!\nUnrest in Ukraine: §Y[?ukraine_crisis_level]§!\nUnrest in the Transcaucasia: §Y[?transcaucasia_crisis_level]§!"
  SOV_governate_rebellion_decisions:0 "Rebellions within the Governorates"
  SOV_governate_rebellion_decisions_desc:0 "\nWe have failed to reform the Governorate system. Our garrisons have reported armed assaults on many cities within the Governorates. It appears local militias within all of the Governorates have launched a sophisticated and planned revolt. §!"
@@ -84,6 +103,12 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  SOV_tour_of_riga:0 "Tour of Riga"
  SOV_tour_of_baku:0 "Tour of Baku"
  SOV_tour_of_minsk:0 "Tour of Minsk"
+ SOV_governorate_crisis_war:0 "Governorate Independence War"
+ SOV_governorate_crisis_resolved:0 "Reformed Governorate System"
+ SOV_riots_in_transcaucasia:0 "Riots in Transcaucasia"
+ SOV_riots_in_baltic:0 "Riots in the Baltics"
+ SOV_riots_in_belarus:0 "Riots in Belarus"
+ SOV_riots_in_ukraine:0 "Riots in Ukraine"
  rus.1.title:0 "A Trip to Kiev?"
  rus.1.desc:0 "Over the past couple of weeks, Kirill has been bombarded with reports of civil unrest in Ukraine. Perhaps, Kirill could travel to Kiev and sort this issue out?"
  rus.1.a:0 "Plan the trip."
@@ -116,6 +141,25 @@ SOV_governorate_crisis_decisions:0 "§RCivil Unrest§! in the Governorates"
  rus.30.title:0 "The Russian Empire in 1936"
  rus.30.desc:0 "From the marshes of Belarus all the way to the permafrost coasts of Siberia, the Imperial Russian flag flies high. However, don't let the exterior mislead you. The Imperial Russian Empire has been letting it's previous glory fade. With every year since the Great Period of Instability, the empire has been faced with problem after problem. In recent years, one of the most important and largely ignored problem is that of the Governorate system.\nThe Governorate system was established during the  Great Period of Instability. It's goal is to counter independence movements by granting local populations limited autonomy. However, the years since then have dramatically been getting worse, with more protests and terrorist attacks happening every month. Tsar Kirill has long ignored this problem, and allowed it to slowly worsen over the last couple of years.\nAll the while, Soviet resistance groups have been attacking many major Russian cities, such as Petersburg and Tsaritsyn. These groups call for the abolishment of the monarchy, and an establishment of a proletariat government. While still rather a small resistance group, this problem could get out of hand if managed improperly."
  rus.30.a:0 "Onwards!"
+ rus.32.title:0 "Unrest in the Baltics"
+ rus.32.desc:0 "Protests have sprung up in Tallinn, Riga, and Kaunas, with many protests turning into riots. Police have equipped themselves with riot gear, but more people keep showing up. It's unclear when the rioters will give up and go home."
+ rus.32.a:0 "Oh, dear."
+ rus.33.title:0 "Unrest in Belarus"
+ rus.33.desc:0 "Protests around Minsk started early today, with many turning violent quickly. Police have equipped themselves with riot gear, but more people keep showing up. It's unclear when the rioters will give up and go home."
+ rus.33.a:0 "Oh, dear."
+ rus.34.title:0 "Unrest in Ukraine"
+ rus.34.desc:0 "Protests sprung up yesterday in many major Ukrainian cities, including Kiev. Today, protesters have returned in more numbers, and some protesters have become violent. Police have equipped themselves with riot gear, but more people keep showing up. It's unclear when the rioters will give up and go home."
+ rus.34.a:0 "Oh, dear."
+ rus.35.title:0 "Unrest in Transcaucasia"
+ rus.35.desc:0 "Early this morning, Oil Producers woke up to unmanned oil rigs. It appears the workers left night shift and abandoned the oil rigs. This caused massive oil spills across the Baku Oil Fields, causing thousands of dollars in damages and lost oil. The workers appeared later today in the Baku city center, protesting Russian control over Baku oil. They call for independence from Russia, and some protesters started throwing objects at our police. Police responded by equipping themselves with riot gear, but more people keep showing up. It's unclear when the rioters will give up and go back to work."
+ rus.35.a:0 "Oh, dear."
+ rus.37.title:0 "Imperial Reforms"
+ rus.37.desc:0 "Riots have quietened across the Governorates. No major protests have occured recently, but they will occur in the future. With that in mind, we should use this time to implement reforms into the most needed Governorate."
+ rus.37.a:0 "Reform the Ukrainian Governorate."
+ rus.37.b:0 "Reform the Baltic Governorate."
+ rus.37.c:0 "Reform the Transcaucasian Governorate."
+ rus.37.d:0 "Reform the Belarusian Governorate."
+ rus.37.e:0 "Kirill doesn't take the opportunity."
  rus.40.title:0 "Tsar Kirill Vladimirovich has been Assassinated!"
- rus.40.desc:0 ""
+ rus.40.desc:0 "Tsar Kirill Vladimirovich Romanov was in a car tour in a Governorate city, when he was suddenly shot from a sniper in a building. An investigation was promptly launched, and evidence supports independence rebels compromised the car route and, subsequently, assassinated the Tsar."
  rus.40.a:0 "It was only a matter of time."
