--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -84,6 +84,7 @@
  FRA_communism_party:0 "Parti Communiste Francais"
  FRA_democratic_party:0 "Parti Radical"
  FRA_fascism_party:0 "Mouvement Franciste"
+ SOV_neutrality_party:0 "Imperial Russian Aristocracy"
  SOV_communism_party:0 "All-Union Communist Party"
  SOV_democratic_party:0 "Trudoviks"
  SOV_fascism_party:0 "RFP"
