--- a/localisation/dual_leaders_l_english.yml
+++ b/localisation/dual_leaders_l_english.yml
@@ -22,7 +22,13 @@
  ## Italy stuff
  ITA_LEADER_TITLE:0 "Il Duce"
  ITA_EMMANUEL_III:0 "Victor Emmanuel III"
+ ##Imperial Russia stuff
+ SOV_IMPERIAL_TITLE:0 "Tsar of Russia"
+ KIRILL_VLADIMIROVICH:0 "Kirill Vladimirovich Romanov"
+ ##Soviet Russia stuff
+ 
  ## Louisiana stuff
+ 
  ## Fascist Bavarian stuff
  BAV_CHANCELLOR_TITLE:0 "Chancellor"
  BAV_CHANCELLOR_DESC:0 "Adolf Hitler, Chancellor of the Bavarian Reich, swiftly rose to power after the collapse of the Holy Roman Empire. During the interwar period, he slowly changed Bavaria into an ultra-nationalistic state, turning himelf into the \"sole leader of the German people\"."
