--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2658,8 +2658,10 @@
  SOV_soviet_resistance:0 "Soviet Resistance"
  SOV_soviet_resistance_desc:0 "Soviet resistance groups are active in many major Russian cities."
  SOV_imperial_governorate:0 "Imperial Governorate"
- SOV_imperial_governorate_desc:0 "The [From.Owner.GetAdjective]s swear loyalty to Tsar Kirill Vladimirovich, the leader of Imperial Russia. Their Imperial Governorate status grants them limited autonomy."
+ SOV_imperial_governorate_desc:0 "[From.Owner.GetLeader], Leader of the [From.Owner.GetAdjective] Governorate swears loyalty to Tsar Kirill Vladimirovich, the leader of Imperial Russia. Their Imperial Governorate status grants them limited autonomy."
  SOV_unindustrialized:0 "Unindustrialized"
  SOV_unindustrialized_desc:0 "The factories we currently have are very old, lacking modern standards, and have outdated equipment."
  SOV_unpopular_monarch:0 "Unpopular Monarch"
  SOV_unpopular_monarch_desc:0 "Tsar Kirill Vladimirovich is very unpopular among the people of Russia."
+ autonomy_imperial_governorate:0 "Imperial Governorate"
+ SOV_imperial_governorate_desc:0 "[From.Owner.GetLeader], Leader of the [From.Owner.GetAdjective] Governorate swears loyalty to Tsar Kirill Vladimirovich, the leader of Imperial Russia. Their Imperial Governorate status grants them limited autonomy."
